k8s/apps/archiveteam-warrior/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: archiveteam-warrior
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-warrior
  namespace: archiveteam-warrior
  labels:
    app.kubernetes.io/name: archiveteam-warrior
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: archiveteam-warrior
  template:
    metadata:
      labels:
        app.kubernetes.io/name: archiveteam-warrior
    spec:
      containers:
        - name: archiveteam-warrior
          image: atdr.meo.ws/archiveteam/warrior-dockerfile:latest@sha256:9eaa5a345e7f1eb9a13ce407eb7943463bfa17ad14c0f0174469af8f4c5447c2
          ports:
            - name: http
              containerPort: 8001
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: archiveteam-warrior
  namespace: archiveteam-warrior
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: archiveteam-warrior
  ports:
    - port: 80
      targetPort: 8001
      name: http
