k8s/apps/archiveteam-warrior/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: archiveteam-warrior
  namespace: archiveteam-warrior
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Archive Team Warrior"
    gethomepage.dev/description: "Distributed web archiving"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "sh-archiveteam-warrior.png"
    gethomepage.dev/href: "https://archiveteam-warrior.item.fyi"
    gethomepage.dev/siteMonitor: "http://archiveteam-warrior.archiveteam-warrior.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=archiveteam-warrior"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`archiveteam-warrior.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: archiveteam-warrior
          port: 80
  tls: {}
